--- a/ui/src/components/cutting/Cutting.css
+++ b/ui/src/components/cutting/Cutting.css
@@ -1,6 +1,6 @@
 /* .Cutting {
     margin: 30px;
-  } */
+  }
   
   canvas {
     display: block;
@@ -8,7 +8,7 @@
     margin-right: auto;
     width: 1000px;
     height: 500px;
-    background-color: #f5f5f5;
+    background-color: black;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
+  } */
