--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -8,3 +8,8 @@
   justify-content: center;
   align-items: center;
 }
+#c{
+  background-size: 20px 20px;
+  background-image: linear-gradient(90deg, gray 1px, transparent 0px), linear-gradient(gray 1px, transparent 0px);
+  /* border:10px solid */
+}
